2004-06-07  Ben Wilde <wilde@cs.unc.edu>

	*Added ForceCalculator to the GUI folder


2004-05-18  Jeremy Cribb <jcribb@email.unc.edu>

	* Initial Version
